# hafifa-GPU

./: README.md
Vectors/: CMakeLists.txt
Vectors/Include/: Kernels.cuh  utils.h
Vectors/header/: Kernels.cuh
Vectors/src/: Kernels.cu  main.cu  utils.cpp
